# dorfperfekt

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
dorfperfekt/: __main__.py  display.py  dorfperfekt.py  map.py  tile.py  tilemap.py
tests/: test_map.py  test_scenarios.py  test_tile.py  test_tilemap.py
tests/scenarios/: broken_game.txt  demo_game.txt  invalid_position.txt  perfect_station.txt
