[tool.poetry]
name = "dorfperfekt"
version = "0.1.0"
description = "Tile placement suggestions for the game Dorfromantik."
authors = ["amosborne <amosborne@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
matplotlib = "^3.5.1"
PySide6 = "^6.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
