[tool.poetry]
name = "dorfperfekt"
version = "0.1.0"
description = "Tile placement suggestions for the game Dorfromantik."
authors = ["amosborne <amosborne@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
matplotlib = "^3.5.1"
PySide6 = "^6.2.3"
numpy = "^1.22.2"
aenum = "^3.1.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
black = "^22.1.0"
isort = "^5.10.1"
flake9 = "^3.8.3"
pytest = "^7.0.1"

[tool.poetry.scripts]
dorfperfekt = "dorfperfekt.__main__:main"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = "*.ipynb_checkpoints*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
